# is-it-on-netflix

./: Cargo.toml  README.md  build.rs  getout.sh  logan.sh
misc/: notes.md
src/: json.rs  lib.rs  main.rs
templates/: index.html  index.jinja  movies.jinja  user.html  user.jinja
